# hello_cmake

./: CMakeLists.txt
examples/: exec_module1.cpp  exec_module1_module2.cpp  plotTrajectory.cpp  practice1_eigen_matrix.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: ClassMat.hpp
modules/module1/src/: ClassMat.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/module2/: ClassEigenMat.hpp
modules/module2/src/: ClassEigenMat.cpp
modules/module3/: CMakeLists.txt
modules/module3/include/module3/: ClassPangolin.hpp
modules/module3/src/: ClassPangolin.cpp
